--- a/buy/password.html
+++ b/buy/password.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0;">
+		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0,">
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
@@ -12,7 +12,7 @@
 		<script>
 			sessionStorage.billinfo = 199
 			function confirm() {
-				if (localStorage.clickcount >= sessionStorage.billinfo) {
+				if (Number(localStorage.clickcount) >= Number(sessionStorage.billinfo)) {
 					sessionStorage.name = "original"//这里的original是作为默认图片的名字
 					sessionStorage.cname = "密码为'Capitalism will DIE!'"
 					localStorage.clickcount -= sessionStorage.billinfo
