--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 				if (localStorage.isBuy) {//是否买密码
 					localStorage.isBuy = 0;
 				}
+				if (localStorage.have) {
+					localStorage.have = "";
+				} else {
+					localStorage.have = "";
+				}
 			}
 		</script>
 	</head>
@@ -79,7 +84,7 @@
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="trade.html" class="nav-link">狗蛙交易</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">我的</a></li>
+					<li class="nav-item"><a href="mine.html" class="nav-link">我的</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				</ul>
