--- a/terminal.html
+++ b/terminal.html
@@ -16,16 +16,21 @@
 			p {
 				color: green;
 				font-family: 'Courier New', Courier, monospace;
+				font-size: 24px;
 			}
 			input {
 				background-color: gray;
+				width: 90%;
 			}
 			button {
 				background-color: darkslategray;
+				width: 10%;
 			}
 		</style>
 	</head>
 	<body>
+		<p>You can run the javascript here,and you can change the data whatever you know.</p>
+		<br>
 		<input id="ter"/>
 		<button onclick="run()">run</button><p id="output"></p>
 		<p>sessionStorage</p>
