--- a/trade.html
+++ b/trade.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0;">
+		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0,">
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
@@ -36,9 +36,9 @@
 				</a>
 		
 				<ul class="nav nav-pills">
-					<li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="#" class="nav-link active">狗蛙交易</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">我的</a></li>
+					<li class="nav-item"><a href="mine.html" class="nav-link">我的</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">FaQs</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				</ul>
