--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 				document.getElementById("money").innerHTML = "余额： " + localStorage.clickcount +
 					"<i class='fa fa-bitcoin' style='color: white;'></i>";
 			}
+			
+			if (typeof(Storage) !== "undefined") {
+				if (sessionStorage.name) {
+					sessionStorage.name = "";
+				} else {
+					sessionStorage.name = "";
+				}
+				if (sessionStorage.cname) {
+					sessionStorage.cname = "";
+				} else {
+					sessionStorage.cname = "";
+				}
+				if (sessionStorage.billinfo) {
+					sessionStorage.billinfo = 0;
+				} else {
+					sessionStorage.billinfo = 0;
+				}
+				if (localStorage.isBuy == "undefined") {//是否买密码
+					localStorage.isBuy = 0;
+				}
+				if (localStorage.have == "undefined") {
+					localStorage.have = "";
+				}
+			}
 		</script>
 	</head>
 	<body>
